2011-06-02  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.4.2 Released.

	* AST-2011-007

2011-05-20  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.8.4.1 Released.

	r315891 | mnicholson | 2011-04-27 13:57:56 -0500 (Wed, 27 Apr 2011) | 14 lines

	Fix our compliance with RFC 3261 section 18.2.2.
	This change optimizes the free_via() function and removes some redundant
	null checking. It also fixes compliance with RFC 3261 section 18.2.2 by
	always using the port specified in the Via header for routing responses
	(even when maddr is not set). Also the htons() function is now used
	when setting the port.	Additional documentation comments have been
	added in various places to make the logic in the code clearer.
		(closes issue 0018951)
		Reported by: jmls
		Patches:
			issue18951_set_proper_port_from_via.patch uploaded by 
			wdoekes (license 717) (modified)

	r318720 | mnicholson | 2011-05-12 18:35:51 -0500 (Thu, 12 May 2011) |
	6 lines

	Handle ipv6 addresses in the sent-by Via: field.

	This change fixes a regression in via header parsing and ipv6
	handling.

	(closes issue 0018951)

	r319142 | mnicholson | 2011-05-16 10:53:27 -0500 (Mon, 16 May 2011) | 8 lines

	Make sure tcptls_session exists before dereferencing it.

	(closes issue 0019192)
	Reported by: stknob
	Patches:
	      10-tcptls-unreachable-peer-segfault.patch uploaded by Chainsaw
	      (license 723)
	      Tested by: vois, Chainsaw

	r320180 | mnicholson | 2011-05-20 13:48:46 -0500 (Fri, 20 May 2011) |
	16 lines

	This commit modifies the way polling is done on TLS sockets.

	Because of the buffering the TLS layer does, polling is unreliable. If
	poll is called while there is data waiting to be read in the TLS layer but not
	at the network layer, the messaging processing engine will not proceed until
	something else writes data to the socket, which may not occur. This change
	modifies the logic around TLS sockets to only poll after a failed read on a