@@ -1,3 +1,9 @@
+2011-06-22  Leif Madsen <lmadsen@digium.com>
+
+	* Asterisk 1.8.4.3 Released.
+
+	* AST-2011-008, AST-2011-009, AST-2011-010
+
 2011-06-02  Leif Madsen <lmadsen@digium.com>
 
 	* Asterisk 1.8.4.2 Released.
